--- a/sass/partials/_modals.scss
+++ b/sass/partials/_modals.scss
@@ -3,7 +3,8 @@
   height: 90%!important;
   margin-left: auto!important;
   margin-right: auto!important;
-   background: rgba(255, 255, 255, 0.9)!important;
+   //background: rgba(255, 255, 255, 0.9)!important;
+  background: #fff!important;
   //background: url('../img/modal-back.png')!important;
   border-radius: 10px;
   text-align: center;
