--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,8 @@ html,body {
   box-sizing: border-box;
   font-size: 16px;
   line-height: 1.8;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Raleway', sans-serif;
+
 }
 a {
   text-decoration: none;
@@ -42,6 +43,9 @@ body {
         img {
           width: 300px;
           margin-left: 2%;
+          &:hover {
+            cursor: pointer;
+          }
         }
       }
       #city {
@@ -51,6 +55,7 @@ body {
       }
       #clouds {
         z-index: 1;
+        display: flex;
       }
     }
     #theContent {
