--- a/sass/partials/_modals.scss
+++ b/sass/partials/_modals.scss
@@ -4,7 +4,8 @@
   margin-left: auto!important;
   margin-right: auto!important;
    //background: rgba(255, 255, 255, 0.9)!important;
-  background: #fff!important;
+  background: #242424!important;
+  color: #fff!important;
   //background: url('../img/modal-back.png')!important;
   border-radius: 10px;
   text-align: center;
@@ -18,7 +19,7 @@
 transition: all 200ms ease-in;
     &:hover {
       cursor: pointer;
-      text-shadow: 5px 5px 0px #60A29E;
+      text-shadow: 5px 5px 0px #75aabf;
       -moz-transform: translateX(0px) translateY(-5px);
 -webkit-transform: translateX(0px) translateY(-5px);
 -o-transform: translateX(0px) translateY(-5px);
@@ -26,10 +27,10 @@ transition: all 200ms ease-in;
 transform: translateX(0px) translateY(-5px);
     }
   }
-  img {
-    -webkit-box-shadow: 10px 10px 10px 0 #000;
-box-shadow: 10px 10px 10px 0 #000;
-  }
+//  img {
+//    -webkit-box-shadow: 10px 10px 10px 0 #000;
+//box-shadow: 10px 10px 10px 0 #000;
+//  }
   .closeBtn {
     width: 100px;
     box-shadow: none;
@@ -40,7 +41,9 @@ box-shadow: 10px 10px 10px 0 #000;
 }
 .animatedModal2-on {
   //font-family: 'Rock Salt', sans-serif;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Raleway', sans-serif;
+  //background: #000!important;
+  //color: #fff!important;
   h3 {
     font-size: 1.8rem;
     text-transform: uppercase;
@@ -62,12 +65,12 @@ box-shadow: 10px 10px 10px 0 #000;
   }
   .carteContent {
     p {
-      font-family: 'Lato', sans-serif;
+      font-family: 'Raleway', sans-serif;
       font-style: italic;
       font-size: 1rem
     }
     h4,h5 {
-      font-family: 'Lato', sans-serif;
+      font-family: 'Raleway', sans-serif;
       text-transform: uppercase;
     }
     h4 {
@@ -85,10 +88,21 @@ box-shadow: 10px 10px 10px 0 #000;
     font-family: 'Rock Salt', sans-serif;
     font-size: 1.5rem;
     text-transform: uppercase;
+    margin-bottom: 0;
   }
   h4 {
     font-size: 1.2rem;
     text-transform: uppercase;
+    margin-top: 0;
+  }
+  #contactPhotos {
+    display: flex;
+    justify-content: space-around;
+    img {
+      width: 300px;
+      height: 300px;
+      border-radius: 5%;
+    }
   }
   p {
     font-size: 1rem;
@@ -98,6 +112,7 @@ box-shadow: 10px 10px 10px 0 #000;
   }
   a {
     color: #000;
+    background: #75aabf;
     font-size: 1rem;
     padding: 1%;
     border: 1px solid #000;
@@ -109,8 +124,8 @@ box-shadow: 10px 10px 10px 0 #000;
     transition: all 200ms ease-in;
     &:hover {
       text-shadow: none;
-      -webkit-box-shadow: 10px 10px 10px 0 #60A29E;
-      box-shadow: 10px 10px 10px 0 #60A29E;
+      -webkit-box-shadow: 10px 10px 10px 0 #75aabf;
+      box-shadow: 10px 10px 10px 0 #75aabf;
       -moz-transform: translateX(0px) translateY(-5px);
       -webkit-transform: translateX(0px) translateY(-5px);
       -o-transform: translateX(0px) translateY(-5px);
