--- a/sass/partials/_nav.scss
+++ b/sass/partials/_nav.scss
@@ -6,7 +6,11 @@
   height: 200px;
   text-align: center;
   #logo {
-    width: 70%;
+    width: 180px;
+    //position: absolute;
+    //top: 40px;
+    //left: 50%;
+
     -webkit-transition: all 200ms ease-in;
 -moz-transition: all 200ms ease-in;
 -ms-transition: all 200ms ease-in;
@@ -15,12 +19,9 @@ transition: all 200ms ease-in;
   }
   #mainMenu {
     // display: none;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
     ul {
       display: flex;
-      justify-content: space-around;
+      justify-content: space-between;
       align-items: center;
       list-style: none;
       #planningBtn, #contactBtn {
@@ -28,6 +29,19 @@ transition: all 200ms ease-in;
       }
       #carteBtn {
         width: 90px;
+        //position: absolute;
+        //top: 20px;
+        //left: 30px;
+      }
+      #planningBtn {
+        //position: absolute;
+        //top: 15px;
+        //right: 15px;
+      }
+      #contactBtn {
+        //position: absolute;
+        //top: 100%;
+        //right: 15px;
       }
       li,a {
         line-height: 2;
@@ -48,11 +62,11 @@ transition: all 200ms ease-in;
         &:hover {
           // cursor: pointer;
           opacity: .8;
-          -moz-transform: scale(1) rotate(0deg) translateX(0px) translateY(-4px) skewX(0deg) skewY(0deg);
--webkit-transform: scale(1) rotate(0deg) translateX(0px) translateY(-4px) skewX(0deg) skewY(0deg);
--o-transform: scale(1) rotate(0deg) translateX(0px) translateY(-4px) skewX(0deg) skewY(0deg);
--ms-transform: scale(1) rotate(0deg) translateX(0px) translateY(-4px) skewX(0deg) skewY(0deg);
-transform: scale(1) rotate(0deg) translateX(0px) translateY(-4px) skewX(0deg) skewY(0deg);
+//          -moz-transform: scale(1) rotate(0deg) translateX(0px) translateY(-4px) skewX(0deg) skewY(0deg);
+//-webkit-transform: scale(1) rotate(0deg) translateX(0px) translateY(-4px) skewX(0deg) skewY(0deg);
+//-o-transform: scale(1) rotate(0deg) translateX(0px) translateY(-4px) skewX(0deg) skewY(0deg);
+//-ms-transform: scale(1) rotate(0deg) translateX(0px) translateY(-4px) skewX(0deg) skewY(0deg);
+//transform: scale(1) rotate(0deg) translateX(0px) translateY(-4px) skewX(0deg) skewY(0deg);
         }
       }
     }
